--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/*$greyBlue: hsl(237, 18%, 59%);*/
+/*$red: hsl(345, 95%, 68%);*/
+/*$topRed: hsl(345, 62%, 57%);*/
+/*$white: hsl(0, 0%, 100%);*/
+/*$desatBlue: hsl(236, 21%, 26%);*/
+/*$vDarkBlue: rgb(30, 31, 41);*/
+/*$vvDarkBlue: rgb(25, 26, 36);*/
+/*$top-card: rgb(44, 44, 68);*/
+/*$box-shadow: 0 7px 3px 0 rgb(21, 21, 21);*/
+/*$half-shadow: 0 3px rgba(71, 83, 115, 0.2) inset;*/
 @keyframes flip-top {
   to {
     transform: rotateX(90deg);
@@ -40,12 +50,14 @@ body {
 h1 {
   text-transform: uppercase;
   color: hsl(0, 0%, 100%);
+  text-shadow: rgb(201, 0, 0) 1px 0 10px;
   text-align: center;
   margin-bottom: 50px;
   letter-spacing: 5px;
 }
 
 main {
+  padding-top: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,7 +73,8 @@ main .cards .card {
   font-size: 25px;
 }
 main .cards .card p {
-  color: hsl(237, 18%, 59%);
+  color: white;
+  text-shadow: rgb(201, 0, 0) 1px 0 10px;
   font-size: 11px;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -69,7 +82,7 @@ main .cards .card p {
 main .cards .card .flip-card {
   display: flex;
   flex-direction: column;
-  box-shadow: 0 7px 3px 0 rgb(21, 21, 21);
+  box-shadow: 0 7px 3px 0 rgb(148, 32, 11);
   position: relative;
   margin: 15px auto;
 }
@@ -77,7 +90,7 @@ main .cards .card .top-half,
 main .cards .card .bottom-half,
 main .cards .card .top-flip,
 main .cards .card .bottom-flip {
-  color: hsl(345, 95%, 68%);
+  color: hsl(345, 75%, 43%);
   font-size: 35px;
   height: 43px;
   width: 77px;
@@ -85,18 +98,18 @@ main .cards .card .bottom-flip {
   overflow: hidden;
   text-align: center;
   will-change: transform !important;
-  box-shadow: 0 3px rgba(71, 83, 115, 0.2) inset;
+  box-shadow: 0 3px rgba(201, 90, 0, 0.2) inset;
 }
 main .cards .card .top-half,
 main .cards .card .top-flip {
-  color: hsl(345, 62%, 57%);
+  color: hsl(345, 65%, 52%);
   border-radius: 5px 5px 0 0;
-  background-color: rgb(44, 44, 68);
+  background-color: rgb(246, 143, 40);
 }
 main .cards .card .top-half::before,
 main .cards .card .top-flip::before {
   content: "";
-  background-color: rgb(25, 26, 36);
+  background-color: rgba(49, 29, 0, 0.633);
   height: 10px;
   width: 10px;
   border-radius: 100%;
@@ -107,7 +120,7 @@ main .cards .card .top-flip::before {
 main .cards .card .top-half::after,
 main .cards .card .top-flip::after {
   content: "";
-  background-color: rgb(25, 26, 36);
+  background-color: rgba(49, 29, 0, 0.633);
   height: 10px;
   width: 10px;
   border-radius: 100%;
@@ -121,13 +134,13 @@ main .cards .card .bottom-flip {
   justify-content: center;
   align-items: flex-end;
   border-radius: 0 0 5px 5px;
-  background-color: hsl(236, 21%, 26%);
+  background-color: hsl(32, 97%, 54%);
   box-shadow: 0 -2px 5px 0 rgba(71, 83, 115, 0.7) inset;
 }
 main .cards .card .bottom-half::before,
 main .cards .card .bottom-flip::before {
   content: "";
-  background-color: rgb(25, 26, 36);
+  background-color: rgba(49, 29, 0, 0.633);
   height: 10px;
   width: 10px;
   border-radius: 100%;
@@ -138,7 +151,7 @@ main .cards .card .bottom-flip::before {
 main .cards .card .bottom-half::after,
 main .cards .card .bottom-flip::after {
   content: "";
-  background-color: rgb(25, 26, 36);
+  background-color: rgba(49, 29, 0, 0.633);
   height: 10px;
   width: 10px;
   border-radius: 100%;
@@ -165,7 +178,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(https://raw.githubusercontent.com/alleycaaat/frontend-mentor/main/countdown-timer/images/pattern-hills.svg);
+  /*background-image: url(https://raw.githubusercontent.com/alleycaaat/frontend-mentor/main/countdown-timer/images/pattern-hills.svg);*/
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -186,11 +199,11 @@ footer .media a :hover {
 }
 footer .femc {
   margin-bottom: 10px;
-  color: hsl(237, 18%, 59%);
+  color: hsl(20, 86%, 3%);
 }
 footer .femc a {
   text-decoration: none;
-  color: hsl(345, 95%, 68%);
+  color: hsl(345, 75%, 43%);
 }
 footer .femc a:hover {
   text-transform: lowercase;
@@ -211,5 +224,12 @@ footer .femc a:hover {
     height: 80px !important;
     width: 125px !important;
     padding: 34px 7px !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  body {
+    background-image: url(mariage2.jpg);
+    background-repeat: no-repeat;
+    background-size: 450px 667px;
   }
 }/*# sourceMappingURL=styles.css.map */
